--- a/index.html
+++ b/index.html
@@ -2,17 +2,59 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1,
-  maximum-scale=5" />
-  <link rel="icon" href="devchallenges.png" />
-  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+  maximum-scale=5">
+  <link rel="icon" href="devchallenges.png">
+  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
   <title>Devchallenges</title>
 </head>
 
 <body>
+  <nav>
+    <div>
+      <p>THIS INTERIOR</p>
+    </div>
 
+    <button>
+  
+    </button>
+
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Collection</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <h1>Modern interior</h1>
+    <p>A full-Service residential & commercial interior design and staging company 
+      offering professionalorganizing & eco-services.</p>
+    <a href="#">Read more</a>
+  </header>
+
+  <main>
+    <h2 class="invisible w-0 h-0"></h2>
+    <img src="images/photo1" alt="A beautiful room" aria-hidden="true">
+    <div>
+      <div>
+        <img src="images/photo2" alt="Aliza Webber" aria-hidden="true">
+        <div>
+          <h3>Aliza Webber</h3>
+          <p>Interior designer</p>
+        </div>
+
+        <p>Designed in 2020 by ALiza Webber</p>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>created by <a href="#">Peter Abah</a> - <a href="#">devChallenges</a></p>
+  </footer>
 </body>
 
 </html>
