--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   <title>Devchallenges</title>
 </head>
 
-<body class="px-3 font-sans bg-secondary text-primary">
-  <nav class="py-5 flex justify-between items-center">
+<body class="flex flex-col h-screen px-3 font-sans bg-secondary text-primary sm:px-20">
+  <nav class="py-5 flex justify-between items-center lg:mb-28">
     <div class="p-2 border border-primary">
       <p class="font-serif font-extralight text-sm">THIS INTERIOR</p>
     </div>
 
-    <button class="relative z-20">
+    <button class="relative z-20 md:hidden" id="menu">
       <span class="material-icons-outlined absolute top-0 left-0 text-4xl transition-all duration-500">menu</span>
       <span class="material-icons-outlined opacity-0 text-4xl transition-all duration-500">close</span>
     </button>
 
-    <ul class="bg-secondary fixed top-0 right-0 left-0 bottom-0 z-10 flex flex-col justify-center items-center transition-all duration-500">
+    <ul id="nav" class="bg-secondary fixed top-0 left-0 bottom-0 w-0 overflow-hidden z-10 flex flex-col justify-center items-center transition-all duration-500 max-w-lg md:static md:flex-row md:w-3/5 md:justify-between">
       <li class="my-2 py-2 font-bold text-lg border-b-2"><a href="#">Home</a></li>
       <li class="my-2 py-2 font-bold text-lg"><a href="#">Collection</a></li>
       <li class="my-2 py-2 font-bold text-lg"><a href="#">About</a></li>
@@ -36,36 +36,40 @@
     </ul>
   </nav>
 
-  <header class="mb-9 pt-5">
-    <h1 class="mb-6 font-display font-medium text-4xl">Modern interior</h1>
-    <p class="w-60 mb-6 text-sm">A full-Service residential & commercial interior design and staging company 
-      offering professionalorganizing & eco-services.</p>
-    <a class="w-max flex items-center font-bold text-sm" href="#">
-      <span class="hover:underline transition-all">Read more </span>
-      <span class="ml-4 material-icons-outlined">trending_flat</span>
-    </a>
-  </header>
+  <div class="flex-grow lg:flex lg:justify-between lg:items-center lg:mb-32">
+    <header class="mb-9 pt-5">
+      <h1 class="mb-6 font-display font-medium text-4xl sm:text-5xl sm:mb-10">Modern interior</h1>
+      <p class="w-60 mb-6 text-sm lg:text-2xl sm:w-auto sm:max-w-sm">A full-Service residential & commercial interior design and staging company 
+        offering professionalorganizing & eco-services.</p>
+      <a class="w-max flex items-center font-bold text-sm" href="#">
+        <span class="hover:underline transition-all">Read more </span>
+        <span class="ml-4 material-icons-outlined">trending_flat</span>
+      </a>
+    </header>
 
-  <main class="relative mb-36">
-    <h2 class="invisible w-0 h-0"></h2>
-    <img class="w-auto mx-auto" src="images/photo1.png" width="280" alt="A beautiful room" aria-hidden="true">
+    <main class="relative mb-36 lg:w-1/2 lg:mb-20">
+      <h2 class="invisible w-0 h-0"></h2>
+      <img class="w-auto mx-auto md:mx-0" src="images/photo1.png" width="280" alt="A beautiful room" aria-hidden="true">
 
-    <div class="absolute right-3 -bottom-20 w-72 p-5 bg-secondary shadow">
-      <div class="flex mb-5">
-        <img class="w-9 mr-3.5 rounded-full" src="images/photo2.png" width="30" alt="Aliza Webber" aria-hidden="true">
-        <div>
-          <h3 class="text-xs font-medium">Aliza Webber</h3>
-          <p class="text-xxs text-gray font-medium">Interior designer</p>
+      <div class="absolute right-3 -bottom-20 w-4/5 max-w-sm p-5 bg-secondary">
+        <div class="flex mb-5">
+          <img class="w-9 mr-3.5 rounded-full" src="images/photo2.png" width="30" alt="Aliza Webber" aria-hidden="true">
+          <div>
+            <h3 class="text-xs font-medium">Aliza Webber</h3>
+            <p class="text-xxs text-gray font-medium">Interior designer</p>
+          </div>
         </div>
+
+        <p class="w-4/5 font-display font-bold text-lg">Designed in 2020 by Aliza Webber</p>
       </div>
+    </main>
+  </div>
 
-      <p class="w-4/5 font-display font-bold text-lg">Designed in 2020 by Aliza Webber</p>
-    </div>
-  </main>
-
-  <footer class="mb-6">
+  <footer class="justify-self-end pb-6">
     <p class="text-center text-sm text-gray font-medium">created by <a class="underline font-bold hover:no-underline transition-all" href="#">Peter Abah</a> - <a class="underline hover:no-underline transition-all" href="#">devChallenges</a></p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
