add README info

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"rel="stylesheet">
 
   <link rel="stylesheet" href="css/main.css">
-  <title>Devchallenges</title>
+  <title>Interior Consultant</title>
 </head>
 
 <body class="flex flex-col h-screen px-3 font-sans bg-secondary text-primary sm:px-20">
@@ -29,10 +29,10 @@
     </button>
 
     <ul id="nav" class="bg-secondary fixed top-0 left-0 bottom-0 w-0 overflow-hidden z-10 flex flex-col justify-center items-center transition-all duration-500 max-w-lg md:static md:flex-row md:w-3/5 md:justify-between">
-      <li class="my-2 py-2 font-bold text-lg border-b-2"><a href="#">Home</a></li>
-      <li class="my-2 py-2 font-bold text-lg"><a href="#">Collection</a></li>
-      <li class="my-2 py-2 font-bold text-lg"><a href="#">About</a></li>
-      <li class="my-2 py-2 font-bold text-lg"><a href="#">Contact</a></li>
+      <li class="my-2 font-bold text-lg"><a class="py-2 border-b-2" href="#">Home</a></li>
+      <li class="my-2 font-bold text-lg"><a class="py-2 hover:border-b-2" href="#">Collection</a></li>
+      <li class="my-2 font-bold text-lg"><a class="py-2 hover:border-b-2" href="#">About</a></li>
+      <li class="my-2 font-bold text-lg"><a class="py-2 hover:border-b-2" href="#">Contact</a></li>
     </ul>
   </nav>
 
@@ -66,7 +66,7 @@
   </div>
 
   <footer class="justify-self-end pb-6">
-    <p class="text-center text-sm text-gray font-medium">created by <a class="underline font-bold hover:no-underline transition-all" href="#">Peter Abah</a> - <a class="underline hover:no-underline transition-all" href="#">devChallenges</a></p>
+    <p class="text-center text-sm text-gray font-medium">created by <a class="underline font-bold hover:no-underline transition-all" href="https://github.com/peter-abah">Peter Abah</a> - <a class="underline hover:no-underline transition-all" href="https://devchallenges.io">devChallenges</a></p>
   </footer>
 
   <script src="script.js"></script>
